# usk-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/interface/: CMakeLists.txt  graphics_buffer.h  graphics_context.h  graphics_interface.h  graphics_shader.h  graphics_texture.h  graphics_window.h
src/platform/cross-window/: CMakeLists.txt  graphics_cross_window.cpp  graphics_cross_window.h
src/platform/glfw/: CMakeLists.txt  graphics_glfw.h  graphics_glfw_keybinds.h  graphics_glfw_window.cpp  graphics_glfw_window.h
src/platform/opengl/: CMakeLists.txt  graphics_gl_buffer.cpp  graphics_gl_buffer.h  graphics_gl_context.cpp  graphics_gl_context.h  graphics_gl_error.cpp  graphics_gl_error.h  graphics_gl_shader.cpp  graphics_gl_shader.h  graphics_gl_texture.cpp  graphics_gl_texture.h  graphics_opengl.h
src/platform/opengl/glad/include/glad/: glad.h
src/platform/opengl/glad/src/: glad.c
src/platform/wrapper/: CMakeLists.txt  graphics_wrapper.cpp  graphics_wrapper.h  graphics_wrapper_buffer.h  graphics_wrapper_imgui.cpp  graphics_wrapper_imgui.h
src/platform/wrapper/macos/: platform_macos.mm
src/platform/wrapper/win32/: platform_win32.cpp
src/rendercommand/: CMakeLists.txt  graphics_render_command.cpp  graphics_render_command.h  graphics_shared_buffer.cpp  graphics_shared_buffer.h
src/renderer/: CMakeLists.txt  graphics_camera.cpp  graphics_camera.h  graphics_mesh.cpp  graphics_mesh.h  graphics_render_command.cpp  graphics_render_command.h  graphics_renderer.h  graphics_renderer_2d.cpp  graphics_renderer_2d.h  graphics_renderer_3d.cpp  graphics_renderer_3d.h  graphics_renderer_base.cpp  graphics_renderer_base.h  graphics_renderer_imgui.h  graphics_shared_buffer.cpp
src/renderer/scene/: graphics_curve.cpp  graphics_curve.h  graphics_grid.cpp  graphics_grid.h  graphics_line.cpp  graphics_line.h  graphics_mesh.cpp  graphics_mesh.h  graphics_object.cpp  graphics_object.h  graphics_scene.cpp  graphics_scene.h  graphics_texture_object.cpp  graphics_texture_object.h
